# BallAndPlate

./: CMakeLists.txt  DetcBallEnvi2Bytes.py  balanceball.cpp
ConecxaoSerial/: ConexaoSerial.cpp  ConexaoSerial.hpp
camera/: camera.cpp  camera.hpp
gui/: Driver Cam.py
